===========================
AFTER THE STORM - CHANGELOG
===========================

Version 0.9.10+dev:
-------------------



Version 0.9.10:
---------------
* General:
  * Raised minimum game version requirement to 1.11.11. All existing
    compatibility code for previous versions has been removed.

* Graphics:
  * New or updated unit graphics: Sprite, Fire Faerie, Forest Spirit, Dryad,
    Demon Shapeshifter.

* Scenarios:
  * Added an option to certain scenarios to ensure Wesnoth does not discard
    the player's gold and recall list under certain circumstances due to a
    behavior change in version 1.11.13 and later. Affected scenarios:
    * E1S9.3 - The Triad, part 3
    * E1S11 - Return to Wesmere, part 2
    * E2S0 - Transience
    * E2S11 - A Final Confrontation
    * E3S0 - Opening (Within)
    * E3S6 - Divergence
    * E3S8B - Destiny, part 1
    * E3S11 - After the Storm

* Units:
  * Balancing changes:
    * Changed Leech's alignment from 'lawful' to 'neutral'.
    * Decreased Leech's HP from 62 to 42.
    * Decreased Leech's melee damage from 11-2 to 9-2.
    * Decreased Leech's unit level from 3 to 1.
  * Converted to the simplified 1.12 animation syntax:
    * Dusk Faerie, Night Nymph, Nightshade Fire
    * Sylvan Warden
    * Sprite, Fire Faerie, Dryad, Forest Spirit
    * Elvish Wayfarer
    * Faerie Avatar
    * Demoness Hellbent Tide
    * Verlissh Control Spire

* User interface:
  * Cutscene themes now use the 1.11.10 [theme] id attribute on 1.11.10 and
    later.


Version 0.9.9:
--------------
* General:
  * Removed Wesnoth development versions warning from the campaign menu entries
    as support for 1.11.8 and later is now mature.
  * New complete algorithm for calculating the relative direction between two
    hex grid locations, handling all six intrinsic facing directions instead
    of only SW and SE.
  * Updated Aragwaith faction from Era of Chaos 1.3.1+dev up to commit
    9dedeba7cddc2a027745c9994a917fdcb78ed341.